[project]
name = "whatsapp-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "logfire>=4.34.0",
    "openai>=2.38.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-ai>=1.104.0",
    "supabase>=2.30.1",
]
